--- a/chicn/jeu/index.html
+++ b/chicn/jeu/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>Chic'n Croc</title>
 		<link rel="stylesheet" href="../jeu/index.css"/>
+	<link rel="preconnect » href=" https://fonts.googleapis.com">
+	<link rel="preconnect » href=" https://fonts.gstatic.com » crossorigin>
+	<link href="https://fonts.googleapis.com/css2? famille=Inconsolata:wght@300&display=swap » rel=" stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 
-
-		<link rel="preconnect » href=" https://fonts.googleapis.com">
-		<link rel="preconnect » href=" https://fonts.gstatic.com » crossorigin>
-		<link href="https://fonts.googleapis.com/css2? famille=Inconsolata:wght@300&display=swap » rel=" stylesheet">
 		<script src="https://kit.fontawesome.com/5511895fd8.js" crossorigin="anonymous"></script>
 	</head>
 
@@ -28,8 +28,10 @@
 			<a href="/chicn">
 				<i class="fas fa-sign-out-alt"></i>Quitter</a>
 
-
 			<div id="contener"></div>
+
+
+
 			<script src="test_tableau.js"></script>
 		</section>
 
